// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RenderSelect /> when children props set should render children 1`] = `
<div>
  <label />
  <select
    className="invoice-select"
  >
    <option>
      5%
    </option>
  </select>
  <ShowErrorInForm
    className="error-text"
    error={null}
    touched={false}
  />
</div>
`;

exports[`<RenderSelect /> when initialized should render without crash 1`] = `
<div>
  <label />
  <select
    className="invoice-select"
  />
  <ShowErrorInForm
    className="error-text"
    error={null}
    touched={false}
  />
</div>
`;
